gcc/testsuite/rust/rustc/ui/type-inference/unbounded-type-param-in-fn.rs
fn foo<T>() -> T {
    panic!()
}

fn main() {
    foo(); // { dg-error ".E0282." "" { target *-*-* } }
}

